# ultraskelly

./: README.md  ai_cam.py  bright_point_tracker.py  fastapi_server.py  main.py  manual_servo_ctrl.py  pid_servo_tracking.py  pyproject.toml  simple_hand_tracker.py  simple_tracker.py
ultraskelly/: __init__.py  __main__.py  __main__bot.py  app.py  bot_launcher.py
ultraskelly-ts/: package.json
ultraskelly-ts/src/: App.tsx  advanced_audio_examples.md  style.css
ultraskelly-ts/src/hooks/: useAudioAnalyzer.ts  useAudioBuffer.ts  useAudioProcessing.ts  useBackendApi.ts  useConditionalUpload.ts  useConversationHistory.ts  useVoiceAgent.ts
ultraskelly-ui/: index.html  package-lock.json  tsconfig.json  vite.config.ts
ultraskelly-ui-og/: package-lock.json  package.json
ultraskelly-ui-og/src/: App.tsx  style.css
ultraskelly-ui/src/: App.tsx  main.tsx  style.css
ultraskelly/api/: routers.py  server_constants.py
ultraskelly/scratch/: bright_point_tracker.py  face_tracker_hailo.py  manual_servo_ctrl.py  motor_pwm_test.py  rotary_motor_manual_drive.py  servo_stuff.py  simple_tracker.py
ultraskelly/stratch/: ai_cam.py  face_tracker.py  face_tracker_hailo.py  hailo_face_landmarks.py  manual_servo_ctrl.py  motor_pwm_test.py  pid_servo_tracking.py  rotary_motor_manual_drive.py  rotory-motor-more-stuff.py  rotory_motor_test.py  servo_stuff.py  simple_tracker.py
ultraskelly/system/: default_paths.py
ultraskelly/ui/: cv2_ui.py  gradio_ui.py
ultraskelly/ultraskelly_app/: ultraskelly_application.py
ultraskelly/utilities/: kill_process_on_port.py
(+110 files in other folders)
