[project]
name = "ultraskelly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adafruit-circuitpython-pca9685>=3.4.20",
    "adafruit-circuitpython-servokit>=1.3.22",
    "fastapi>=0.120.4",
    "gradio>=5.23.1",
    "networkx>=3.5",
    "openai-agents[voice]>=0.4.2",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "psutil>=7.1.2",
    "pydantic>=2.12.3",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
